--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,8 +484,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 75px;
     
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-around;
 }
 
 .client__photos__item {
