--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,8 @@ h1, h2, h3, h4, h5, h6 {
 /* We are clemo */
 
 .werclemo {
+    position: relative;
+
     margin: 0;
     height: 520px;
     width: auto;
@@ -104,8 +106,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .scrollers {
-    margin-top: -186px;
-    margin-left: 96%;
+    position: absolute;
+
+    left: 96%;
+    top: 50%;
+
+    transform: translate(0, -50%);
 }
 
 .scroller {
