--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,6 +461,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .clients__card {
+    display: none;
+}
+
+.card_active {
     display: flex;
     justify-content: end;
     
@@ -516,12 +520,43 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .client__photos__item:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .clients__scrollers {
     margin-top: 50px;
 }
+
+.clients__scroller {
+    float: left;
+    cursor: pointer;
+    
+    margin-left: 20px;
+    
+    width: 15px;
+    height: 15px;
+    border: solid 1px black;
+    border-radius: 50%;
+    
+    transition: background-color 0.2s;
+}
+
+.clients__scroller_active {
+    background-color: #000;
+}
+
+.clients__scroller:first-child {
+    margin-left: 0;
+}
+
+.clients__scroller:hover {
+    background-color: #000;
+}
+
+.clients__scroller_active {
+    background-color: #000;
+}
+
 
 /*Footer*/
 
