--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,6 +311,9 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
 }
 
+#bestteam__container {
+    height: 580px;
+}
 
 .bestteam__title {
     font-size: 60px;
@@ -321,29 +324,43 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .bestteam__slider {
-    height: 403px;
+    height: 503px;
     width: 100%;
     
-    padding-top: 30px;
     position: relative;
 }
 
-.bestteam__sliderContent {
+.slides {
     display: flex;
     justify-content: space-between;
     column-count: 3;
     
-    width: 750px;
-    height: 315px;
+    height: 415px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.bestteam__slider_hidden {
-    display: none;
+.wrapper {
+    overflow: hidden;
+    position: relative;
+    width: 750px;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.slide {
+    display: flex;
+    position: relative;
+    top: 15%;
+    left: -744px;
+    
+    transition: all .5s;
 }
 
 .bestteam__item {
+    padding-left: 40px;
+    padding-right: 40px;
+
     width: 100%;
     
     transition: all .3s;
@@ -373,9 +390,10 @@ h1, h2, h3, h4, h5, h6 {
 .bestteam__info {
     font-size: 15px;
     font-weight: 300;
-    line-height: 10px;
+    line-height: 20px;
     
     text-align: center;
+    margin-top: 0;
 }
 
 .pointer {
