mobile devices test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,8 @@ h1, h2, h3, h4, h5, h6 {
     top: 50%;
 
     transform: translate(0, -50%);
+
+
 }
 
 .scrollers.fixed {
@@ -248,8 +250,7 @@ h1, h2, h3, h4, h5, h6 {
     display: table-cell;
     column-count: 3;
     
-    width: 100%;
-    min-width: 1142px;
+    width: 100vw;
     max-width: 1150px;
     height: 1018px;
     padding-top: 75px;
@@ -264,8 +265,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .bestwork__img {
-    margin-right: 25px;
-    margin-bottom: 25px;
+    margin-right: 2vw;
+    margin-bottom: 2vw;
+
+    width: 30.29vw;
     
     
     transition: all .5s ;
@@ -315,8 +318,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .bestteam {
     margin-top: 60px;
-    min-width: 1150px;
-    width: 100%;
+    width: 100vw;
 }
 
 #bestteam__container {
@@ -556,6 +558,8 @@ h1, h2, h3, h4, h5, h6 {
 .client__photos__item {
     cursor: pointer;
     filter: brightness(85%);
+
+    width: 23vw;
 
     transition: all .3s;
 }
